+ Redesigned expand and collapse icons + Added empty icon to replace non breaking space characters + Some UI fixes + Removed some compiler warnings
git-svn-id: http://agilefant.googlecode.com/svn/branches/Evoluzione2@1745 29784df9-99d5-7e28-3e6c-ac1830307ffc

--- a/web/static/css/import.css
+++ b/web/static/css/import.css
@@ -766,6 +766,7 @@ h2 .editLink {
 
 #subItemHeader table .header, .subItemHeader table .header {
 	height: 22px;
+	padding-left: 3px;
 }
 
 .header a {
@@ -1216,6 +1217,7 @@ select.statusSelect option {
     background-image: url('../img/expand.png');
     background-position: 0% 0%;
     background-repeat: no-repeat;
+    cursor: pointer;
     width: 18px;
     height: 18px;
 }
@@ -1224,6 +1226,7 @@ select.statusSelect option {
     background-image: url('../img/expand.png');
     background-position: 100% 0%;
     background-repeat: no-repeat;
+    cursor: pointer;
     width: 18px;
     height: 18px;
 }
